--- a/test.html
+++ b/test.html
@@ -54,9 +54,31 @@
   section:nth-child(even) {
     background: #27ae60;
   }
+
+  * input {
+    display: block;
+    position: relative;
+    top: 10%;
+    left: 0;
+  }
+  .get {
+    width: 300px;
+    height: 400px;
+    position: absolute;
+    top: 0;
+    left: 20%;
+  }
 </style>
 
 <body>
+  <div class="get">
+    <input type="text" name="n = " id="n">
+    <input type="text" name="k = " id="k">
+    <input type="text" name="d1 = " id="d1">
+    <input type="text" name="d2 = " id="d2">
+    <input type="submit" value="提交">
+  </div>
+
   <main class="tab1">
     <nav>
       <a href="javascript:;">后盾人</a>
@@ -69,48 +91,48 @@
     <nav>
       <a href="javascript:;">后盾人</a>
       <a href="javascript:;">hdcms</a>
-    </nav> 
+    </nav>
     <section>1</section>
     <section>244</section>
   </main>
 </body>
 
 <script>
-	//继承工厂
+  //继承工厂
   function extend(sub, sup) {
     sub.prototype = Object.create(sup.prototype);
     sub.prototype.constructor = sub;
   }
-  
+
   //动作类
-  function Animation() {}
-  Animation.prototype.show = function() {
+  function Animation() { }
+  Animation.prototype.show = function () {
     this.style.display = "block";
   };
   //隐藏所有元素
-  Animation.prototype.hide = function() {
+  Animation.prototype.hide = function () {
     this.style.display = "none";
   };
   //必变元素集合背景
-  Animation.prototype.background = function(color) {
+  Animation.prototype.background = function (color) {
     this.style.background = color;
   };
-	
-	//选项卡类
+
+  //选项卡类
   function Tab(tab) {
     this.tab = tab;
     this.links = null;
     this.sections = null;
   }
   extend(Tab, Animation);
-  Tab.prototype.run = function() {
+  Tab.prototype.run = function () {
     this.links = this.tab.querySelectorAll("a");
     this.sections = this.tab.querySelectorAll("section");
     this.bindEvent();
     this.action(0);
   };
   //绑定事件
-  Tab.prototype.bindEvent = function() {
+  Tab.prototype.bindEvent = function () {
     this.links.forEach((el, i) => {
       el.addEventListener("click", () => {
         this.reset();
@@ -119,18 +141,23 @@
     });
   };
   //点击后触发动作
-  Tab.prototype.action = function(i) {
+  Tab.prototype.action = function (i) {
     this.background.call(this.links[i], "#e67e22");
     this.show.call(this.sections[i]);
   };
   //重置link与section
-  Tab.prototype.reset = function() {
+  Tab.prototype.reset = function () {
     this.links.forEach((el, i) => {
       this.background.call(el, "#95a5a6");
       this.hide.call(this.sections[i]);
     });
   };
-  
+
   new Tab(document.querySelector(".tab1")).run();
   new Tab(document.querySelector(".tab2")).run();
+</script>
+<script type="text/javascript" src="js/球队.js">
+</script>
+<script>
+  main_main(10, 3, 2, 3)
 </script>
