--- a/test.html
+++ b/test.html
@@ -76,12 +76,12 @@
     <input type="text" name="k = " id="k">
     <input type="text" name="d1 = " id="d1">
     <input type="text" name="d2 = " id="d2">
-    <input type="submit" value="提交">
+    <input type="submit" value="提交" >
   </div>
 
   <main class="tab1">
     <nav>
-      <a href="javascript:;">后盾人</a>
+      <a href="javascript:;">test</a>
       <a href="javascript:;">hdcms</a>
     </nav>
     <section>1</section>
@@ -89,7 +89,7 @@
   </main>
   <main class="tab2">
     <nav>
-      <a href="javascript:;">后盾人</a>
+      <a href="javascript:;">test</a>
       <a href="javascript:;">hdcms</a>
     </nav>
     <section>1</section>
@@ -158,6 +158,7 @@
 </script>
 <script type="text/javascript" src="js/球队.js">
 </script>
+<script type="text/javascript" src="js/手串.js"></script>
 <script>
   main_main(10, 3, 2, 3)
 </script>
