--- a/new_file.html
+++ b/new_file.html
@@ -13,15 +13,23 @@
     }
 
     .container {
-      width: 180px;
-      height: 180px;
-      /* border: solid 1px blue; */
+      width: 300px;
+      height: 300px;
+      border: solid 1px blue;
       display: grid;
-      grid-template-rows: repeat(3, 3fr);
-      grid-template-columns: repeat(3, 3fr);
+      grid-template-rows: repeat(4, 1fr);
+      grid-template-columns: repeat(4, 1fr);
+      place-content: center space-evenly;
+      place-items: center center;
     }
     .box{
-      border: solid 5px blue;
+      border: solid 2px rgb(255, 0, 21);
+    }
+    div:first-child{
+      grid-area: 1/1/span 2/span 1;
+    }
+    div:nth-child(3){
+      grid-area: 3/3/span 2/span 1;
     }
 
     /* .container {
@@ -41,7 +49,7 @@
       margin-right: -5px;
     } */
     .box:hover {
-      border: 5px solid red;
+      border: 2px solid rgb(0, 255, 34);
       /* z-index:9999; */
     }
   </style>
@@ -58,6 +66,7 @@
     <div class="box">7</div>
     <div class="box">8</div>
     <div class="box">9</div>
+    <div class="box">10</div>
   </div>
 </body>
 
